# internal/api/json.go
@@ -44,9 +44,13 @@ func jsonHealth(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	synced := duration < time.Duration(config.Global.MaxBlockAge)
 
 	respJSON(w, oapigen.HealthResponse{
-		InSync:        synced,
-		Database:      true,
-		ScannerHeight: util.IntStr(height + 1),
+		InSync:         synced,
+		Database:       true,
+		ScannerHeight:  util.IntStr(height + 1),
+		LastQueried:    db.LastQueriedBlock.AsHeightTS(),
+		LastFetched:    db.LastFetchedBlock.AsHeightTS(),
+		LastCommitted:  db.LastCommittedBlock.AsHeightTS(),
+		LastAggregated: db.LastAggregatedBlock.AsHeightTS(),
 	})
 }
 
